各チームの詳細表示

--- a/src/main/resources/templates/allTeam.html
+++ b/src/main/resources/templates/allTeam.html
@@ -7,13 +7,13 @@
 <body>
 
 <h1>野球チーム一覧</h1>
-
-	<span th:each="team : ${teamList}">
-		<a th:href="@{/teamDetail}">
-			<span th:text="${team.teamName}"></span><br>
+	<span th:each="team : ${session.teamList}">
+		<a th:href="@{'teamDetail?id=' + ${team.id}}">
+		  <span th:text="${team.teamName}"></span><br>
 		</a>
 		<br>
 	</span>
+
 
 </body>
 </html>
